# actix-discord-demo

./: Cargo.toml
src/middleware/: auth.rs
src/util/: extractors.rs
